add toast messages to rehydration request submission

--- a/assets/css/components/_el-message.scss
+++ b/assets/css/components/_el-message.scss
@@ -51,3 +51,10 @@
     opacity: .7
   }
 }
+
+.el-message.request-submitted {
+  box-sizing: border-box;
+  max-width: 600px;
+  top: 130px !important;
+  width: 100%;
+}
